--- a/feedback/package.json
+++ b/feedback/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.18.0",
     "element-react": "^1.4.21",
     "element-theme-default": "^1.4.13",
+    "lodash": "^4.17.11",
     "prop-types": "^15.6.2",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
